project(FreeImage)

set(FreeImage_SOURCES

Source/FreeImage.h
Source/FreeImageIO.h
Source/MapIntrospector.h
Source/Plugin.h
Source/Quantizers.h
Source/ToneMapping.h
Source/Utilities.h
Source/FreeImage/BitmapAccess.cpp
Source/FreeImage/CacheFile.cpp
Source/FreeImage/ColorLookup.cpp
Source/FreeImage/Conversion.cpp
Source/FreeImage/Conversion16_555.cpp
Source/FreeImage/Conversion16_565.cpp
Source/FreeImage/Conversion24.cpp
Source/FreeImage/Conversion32.cpp
Source/FreeImage/Conversion4.cpp
Source/FreeImage/Conversion8.cpp
Source/FreeImage/ConversionFloat.cpp
Source/FreeImage/ConversionRGB16.cpp
Source/FreeImage/ConversionRGBA16.cpp
Source/FreeImage/ConversionRGBAF.cpp
Source/FreeImage/ConversionRGBF.cpp
Source/FreeImage/ConversionType.cpp
Source/FreeImage/ConversionUINT16.cpp
Source/FreeImage/FreeImage.cpp
Source/FreeImage/FreeImageC.c
Source/FreeImage/FreeImageIO.cpp
Source/FreeImage/GetType.cpp
Source/FreeImage/Halftoning.cpp
Source/FreeImage/J2KHelper.cpp
Source/FreeImage/J2KHelper.h
Source/FreeImage/LFPQuantizer.cpp
Source/FreeImage/MemoryIO.cpp
Source/FreeImage/MNGHelper.cpp
Source/FreeImage/MultiPage.cpp
Source/FreeImage/NNQuantizer.cpp
Source/FreeImage/PixelAccess.cpp
Source/FreeImage/Plugin.cpp
Source/FreeImage/PluginBMP.cpp
Source/FreeImage/PluginCUT.cpp
Source/FreeImage/PluginDDS.cpp
Source/FreeImage/PluginGIF.cpp
Source/FreeImage/PluginICO.cpp
Source/FreeImage/PluginIFF.cpp
Source/FreeImage/PluginJNG.cpp
Source/FreeImage/PluginJPEG.cpp
Source/FreeImage/PluginKOALA.cpp
Source/FreeImage/PluginMNG.cpp
Source/FreeImage/PluginPCD.cpp
Source/FreeImage/PluginPCX.cpp
Source/FreeImage/PluginPFM.cpp
Source/FreeImage/PluginPICT.cpp
Source/FreeImage/PluginPNG.cpp
Source/FreeImage/PluginPNM.cpp
Source/FreeImage/PluginPSD.cpp
Source/FreeImage/PluginRAS.cpp
Source/FreeImage/PluginSGI.cpp
Source/FreeImage/PluginTARGA.cpp
Source/FreeImage/PluginWBMP.cpp
Source/FreeImage/PluginXBM.cpp
Source/FreeImage/PluginXPM.cpp
Source/FreeImage/PSDParser.cpp
Source/FreeImage/PSDParser.h
Source/FreeImage/TIFFLogLuv.cpp
Source/FreeImage/tmoColorConvert.cpp
Source/FreeImage/tmoDrago03.cpp
Source/FreeImage/tmoFattal02.cpp
Source/FreeImage/tmoReinhard05.cpp
Source/FreeImage/ToneMapping.cpp
Source/FreeImage/WuQuantizer.cpp
Source/FreeImage/ZLibInterface.cpp


Source/FreeImageToolkit/Background.cpp
Source/FreeImageToolkit/BSplineRotate.cpp
Source/FreeImageToolkit/Channels.cpp
Source/FreeImageToolkit/ClassicRotate.cpp
Source/FreeImageToolkit/Colors.cpp
Source/FreeImageToolkit/CopyPaste.cpp
Source/FreeImageToolkit/Display.cpp
Source/FreeImageToolkit/Filters.h
Source/FreeImageToolkit/Flip.cpp
Source/FreeImageToolkit/JPEGTransform.cpp
Source/FreeImageToolkit/MultigridPoissonSolver.cpp
Source/FreeImageToolkit/Rescale.cpp
Source/FreeImageToolkit/Resize.cpp
Source/FreeImageToolkit/Resize.h

Source/LibJPEG/cderror.h
Source/LibJPEG/cdjpeg.c
Source/LibJPEG/cdjpeg.h
Source/LibJPEG/jaricom.c
Source/LibJPEG/jcapimin.c
Source/LibJPEG/jcapistd.c
Source/LibJPEG/jcarith.c
Source/LibJPEG/jccoefct.c
Source/LibJPEG/jccolor.c
Source/LibJPEG/jcdctmgr.c
Source/LibJPEG/jchuff.c
Source/LibJPEG/jcinit.c
Source/LibJPEG/jcmainct.c
Source/LibJPEG/jcmarker.c
Source/LibJPEG/jcmaster.c
Source/LibJPEG/jcomapi.c
Source/LibJPEG/jconfig.h
Source/LibJPEG/jcparam.c
Source/LibJPEG/jcprepct.c
Source/LibJPEG/jcsample.c
Source/LibJPEG/jctrans.c
Source/LibJPEG/jdapimin.c
Source/LibJPEG/jdapistd.c
Source/LibJPEG/jdarith.c
Source/LibJPEG/jdatadst.c
Source/LibJPEG/jdatasrc.c
Source/LibJPEG/jdcoefct.c
Source/LibJPEG/jdcolor.c
Source/LibJPEG/jdct.h
Source/LibJPEG/jddctmgr.c
Source/LibJPEG/jdhuff.c
Source/LibJPEG/jdinput.c
Source/LibJPEG/jdmainct.c
Source/LibJPEG/jdmarker.c
Source/LibJPEG/jdmaster.c
Source/LibJPEG/jdmerge.c
Source/LibJPEG/jdpostct.c
Source/LibJPEG/jdsample.c
Source/LibJPEG/jdtrans.c
Source/LibJPEG/jerror.c
Source/LibJPEG/jerror.h
Source/LibJPEG/jfdctflt.c
Source/LibJPEG/jfdctfst.c
Source/LibJPEG/jfdctint.c
Source/LibJPEG/jidctflt.c
Source/LibJPEG/jidctfst.c
Source/LibJPEG/jidctint.c
Source/LibJPEG/jinclude.h
Source/LibJPEG/jmemmgr.c
Source/LibJPEG/jmemnobs.c
Source/LibJPEG/jmemsys.h
Source/LibJPEG/jmorecfg.h
Source/LibJPEG/jpegint.h
Source/LibJPEG/jpeglib.h
Source/LibJPEG/jquant1.c
Source/LibJPEG/jquant2.c
Source/LibJPEG/jutils.c
Source/LibJPEG/jversion.h
Source/LibJPEG/rdbmp.c
Source/LibJPEG/rdcolmap.c
Source/LibJPEG/rdgif.c
Source/LibJPEG/rdppm.c
Source/LibJPEG/rdrle.c
Source/LibJPEG/rdswitch.c
Source/LibJPEG/rdtarga.c
Source/LibJPEG/transupp.c
Source/LibJPEG/transupp.h
Source/LibJPEG/wrbmp.c
Source/LibJPEG/wrgif.c
Source/LibJPEG/wrppm.c
Source/LibJPEG/wrrle.c
Source/LibJPEG/wrtarga.c

Source/LibPNG/png.c
Source/LibPNG/png.h
Source/LibPNG/pngconf.h
Source/LibPNG/pngdebug.h
Source/LibPNG/pngerror.c
Source/LibPNG/pngget.c
Source/LibPNG/pnginfo.h
Source/LibPNG/pnglibconf.h
Source/LibPNG/pngmem.c
Source/LibPNG/pngpread.c
Source/LibPNG/pngpriv.h
Source/LibPNG/pngread.c
Source/LibPNG/pngrio.c
Source/LibPNG/pngrtran.c
Source/LibPNG/pngrutil.c
Source/LibPNG/pngset.c
Source/LibPNG/pngstruct.h
Source/LibPNG/pngtrans.c
Source/LibPNG/pngwio.c
Source/LibPNG/pngwrite.c
Source/LibPNG/pngwtran.c
Source/LibPNG/pngwutil.c

Source/Metadata/Exif.cpp
Source/Metadata/FIRational.cpp
Source/Metadata/FIRational.h
Source/Metadata/FreeImageTag.cpp
Source/Metadata/FreeImageTag.h
Source/Metadata/IPTC.cpp
Source/Metadata/TagConversion.cpp
Source/Metadata/TagLib.cpp
Source/Metadata/XTIFF.cpp

Source/ZLib/adler32.c
Source/ZLib/compress.c
Source/ZLib/crc32.c
Source/ZLib/crc32.h
Source/ZLib/deflate.c
Source/ZLib/deflate.h
Source/ZLib/gzclose.c
Source/ZLib/gzguts.h
Source/ZLib/gzlib.c
Source/ZLib/gzread.c
Source/ZLib/gzwrite.c
Source/ZLib/infback.c
Source/ZLib/inffast.c
Source/ZLib/inffast.h
Source/ZLib/inffixed.h
Source/ZLib/inflate.c
Source/ZLib/inflate.h
Source/ZLib/inftrees.c
Source/ZLib/inftrees.h
Source/ZLib/trees.c
Source/ZLib/trees.h
Source/ZLib/uncompr.c
Source/ZLib/zconf.h
Source/ZLib/zlib.h
Source/ZLib/zutil.c
Source/ZLib/zutil.h
)

if(${ANDROID})
else()

set(FreeImage_SOURCES
${FreeImage_SOURCES}

Source/FreeImage/PluginJ2K.cpp
Source/FreeImage/PluginG3.cpp
Source/FreeImage/PluginJP2.cpp
Source/FreeImage/PluginTIFF.cpp

Source/LibOpenJPEG/bio.c
Source/LibOpenJPEG/cio.c
Source/LibOpenJPEG/dwt.c
Source/LibOpenJPEG/event.c
Source/LibOpenJPEG/function_list.c
Source/LibOpenJPEG/image.c
Source/LibOpenJPEG/invert.c
Source/LibOpenJPEG/j2k.c
Source/LibOpenJPEG/jp2.c
Source/LibOpenJPEG/mct.c
Source/LibOpenJPEG/mqc.c
Source/LibOpenJPEG/openjpeg.c
Source/LibOpenJPEG/opj_clock.c
Source/LibOpenJPEG/pi.c
Source/LibOpenJPEG/raw.c
Source/LibOpenJPEG/t1.c
Source/LibOpenJPEG/t2.c
Source/LibOpenJPEG/tcd.c
Source/LibOpenJPEG/tgt.c

#Source/FreeImage/PluginRAW.cpp
#Source/LibRawLite/internal/dcraw_common.cpp
#Source/LibRawLite/internal/dcraw_fileio.cpp
#Source/LibRawLite/internal/demosaic_packs.cpp
#Source/LibRawLite/src/libraw_c_api.cpp
#Source/LibRawLite/src/libraw_cxx.cpp
#Source/LibRawLite/src/libraw_datastream.cpp

Source/OpenEXR/Half/half.cpp

Source/LibTIFF4/t4.h
Source/LibTIFF4/tiff.h
Source/LibTIFF4/tiffconf.h
Source/LibTIFF4/tiffconf.vc.h
Source/LibTIFF4/tiffconf.wince.h
Source/LibTIFF4/tiffio.h
Source/LibTIFF4/tiffio.hxx
Source/LibTIFF4/tiffiop.h
Source/LibTIFF4/tiffvers.h
Source/LibTIFF4/tif_aux.c
Source/LibTIFF4/tif_close.c
Source/LibTIFF4/tif_codec.c
Source/LibTIFF4/tif_color.c
Source/LibTIFF4/tif_compress.c
Source/LibTIFF4/tif_config.h
Source/LibTIFF4/tif_config.vc.h
Source/LibTIFF4/tif_config.wince.h
Source/LibTIFF4/tif_dir.c
Source/LibTIFF4/tif_dir.h
Source/LibTIFF4/tif_dirinfo.c
Source/LibTIFF4/tif_dirread.c
Source/LibTIFF4/tif_dirwrite.c
Source/LibTIFF4/tif_dumpmode.c
Source/LibTIFF4/tif_error.c
Source/LibTIFF4/tif_extension.c
Source/LibTIFF4/tif_fax3.c
Source/LibTIFF4/tif_fax3.h
Source/LibTIFF4/tif_fax3sm.c
Source/LibTIFF4/tif_flush.c
Source/LibTIFF4/tif_getimage.c
Source/LibTIFF4/tif_jbig.c
Source/LibTIFF4/tif_jpeg.c
Source/LibTIFF4/tif_jpeg_12.c
Source/LibTIFF4/tif_luv.c
Source/LibTIFF4/tif_lzma.c
Source/LibTIFF4/tif_lzw.c
Source/LibTIFF4/tif_next.c
Source/LibTIFF4/tif_ojpeg.c
Source/LibTIFF4/tif_open.c
Source/LibTIFF4/tif_packbits.c
Source/LibTIFF4/tif_pixarlog.c
Source/LibTIFF4/tif_predict.c
Source/LibTIFF4/tif_predict.h
Source/LibTIFF4/tif_print.c
Source/LibTIFF4/tif_read.c
Source/LibTIFF4/tif_stream.cxx
Source/LibTIFF4/tif_strip.c
Source/LibTIFF4/tif_swab.c
Source/LibTIFF4/tif_thunder.c
Source/LibTIFF4/tif_tile.c
Source/LibTIFF4/tif_version.c
Source/LibTIFF4/tif_warning.c
Source/LibTIFF4/tif_write.c
Source/LibTIFF4/tif_zip.c
Source/LibTIFF4/tif_zstd.c
Source/LibTIFF4/uvcode.h
)

endif()

foreach(SRC_FILE ${FreeImage_SOURCES})
  set(FreeImage_SOURCES_ABS ${FreeImage_SOURCES_ABS} ${FREEIMAGE_ROOT}/${SRC_FILE})
endforeach()


include_directories(${FREEIMAGE_ROOT}/Source)
include_directories(${FREEIMAGE_ROOT}/Source/FreeImageToolkit)
include_directories(${FREEIMAGE_ROOT}/Source/LibJPEG)
include_directories(${FREEIMAGE_ROOT}/Source/LibMNG)
include_directories(${FREEIMAGE_ROOT}/Source/LibOpenJPEG)
include_directories(${FREEIMAGE_ROOT}/Source/LibPNG)
include_directories(${FREEIMAGE_ROOT}/Source/LibRawLite)
include_directories(${FREEIMAGE_ROOT}/Source/LibTIFF)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR/Half)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR/Iex)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR/IlmImf)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR/IlmThread)
include_directories(${FREEIMAGE_ROOT}/Source/OpenEXR/Imath)
include_directories(${FREEIMAGE_ROOT}/Source/ZLib)

add_definitions(-DOPJ_STATIC -DLIBRAW_NODLL -DLIBRAW_LIBRARY_BUILD -DNO_LCMS)

if(${EXL_BUILD_SHARED})
add_definitions(-DFREEIMAGE_EXPORTS)
else()
add_definitions(-DFREEIMAGE_LIB)
endif()

add_library(FreeImage ${LIBRARY_TYPE} ${FreeImage_SOURCES_ABS})